--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-file-system": "~18.1.11",
     "expo-haptics": "^14.1.4",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
     "expo-location": "~18.1.6",
     "expo-media-library": "~17.1.7",
